INCLUDES = -I$(top_srcdir)/include

lib_LTLIBRARIES = libxmlguichan.la

libxmlguichan_la_LDFLAGS = -no-undefined -release $(LT_RELEASE) -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) 

# The Gui-chan library sources
libxmlguichan_la_SOURCES = 	\
	tinyxml.cpp		\
	tinyxmlerror.cpp	\
	tinyxmlparser.cpp	\
	xmlgui.cpp		
